Sat Dec 23 00:41:01 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/org_xapian_XapianJNI.h,java/native/xapian_jni.h:
	  Move header guards to surround the entire non-comment contents
	  of the header files, which allows the compiler to optimise
	  multiple inclusion (at least GCC does this).

Sat Dec 23 00:38:49 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc,java/native/org_xapian_XapianJNI.h,
	  java/org/xapian/Enquire.java,java/org/xapian/XapianJNI.java:
	  Enquire::getQuery() is implemented entirely in Java, so strip out
	  the unused MyQuery mechanism, and so fix a memory link which it
	  caused.  Fixes the rest of bug#105.
	* java/SmokeTest.java: Add feature test for Enquire::getQuery().

Fri Dec 22 18:48:46 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Query.cc: Release the array in the "Query from array"
	  ctor to avoid a memory leak.  Partly fixes bug#105.

Fri Dec 22 18:30:44 GMT 2006  Olly Betts <olly@survex.com>

	* java/SmokeTest.java: Check getData() on the document in
	  MyMatchDecider returns a non-empty string to make sure we are really
	  getting the right document and not an empty document.

Sat Dec 16 02:14:50 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Remove the sanity check for PHP_EXTENSION_DIR
	  added in Xapian 0.9.8 - if this is the first PHP extension to be
	  installed, the extension directory may not exist and "make install"
	  will create it.
	* configure.ac: If zend.h isn't found and configure was run with
	  "--with-php" we now die rather than disabling PHP support.

Fri Dec 15 16:47:13 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Remove --with-swig option from configure - it no
	  longer has a purpose as we now ship the files which are generated
	  by SWIG.

Tue Dec 12 21:51:23 GMT 2006  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i: Fix PostingIter for all-document iterators - was
	  broken because positionlist_begin() throws an exception for